--- a/websites/dataviewer/public/data.html
+++ b/websites/dataviewer/public/data.html
@@ -60,7 +60,7 @@
 <h1>OpenEarth Viewer</h1>
 
 <div style='float:left; width:350px; height:700px; overflow:auto'>
-<a href="index.html">back to portal</a>
+<a href="index.html"><img src="images\backbut.png" border="0"> Back to portal</a>
   <table style='font-size:small'>
 
 <!-- CASE HEADER -->
